run Error Prone when compiling